feat: ✨ 补全 meta 和图标, 更改那一点点介绍

--- a/index.html
+++ b/index.html
@@ -4,27 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index, follow">
+
     <link rel="canonical" href="https://sudo.yumeka.blog/">
-    <title>Yumeka's Blog</title>
+    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" href="/avatar.png" type="image/png">
+
+    <title>Yumeka の 宇宙</title>
+
+    <meta name="author" content="Yumeka">
+    <meta name="keywords" content="Yumeka, 梦花, 梦花酱, KlxPiao, 个人主页, 博客, 技术宅, Linux">
+    <meta name="description" content="Yumeka (梦花) 的个人博客, 她在宏大世界中构建的一个小角落">
+    <meta name="theme-color" content="#FFB6C1">
+
+    <meta property="og:locale" content="zh_CN">
+    <meta property="og:title" content="Yumeka の 宇宙">
+    <meta property="og:site_name" content="Yumeka の 宇宙">
+    <meta property="og:description" content="这里是梦花在宏大世界中构建的一个小角落。">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sudo.yumeka.blog/">
+    <meta property="og:image" content="https://sudo.yumeka.blog/avatar.png">
+
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@YMKxxxxxxxx">
+    <meta name="twitter:title" content="Yumeka の 宇宙">
+    <meta name="twitter:description" content="这里是梦花在宏大世界中构建的一个小角落。">
+    <meta name="twitter:image" content="https://sudo.yumeka.blog/avatar.png">
+
+    <link rel="stylesheet" href="/style.css">
+
     <style>
-        :root {
-            --bg: #ffffff;
-            --text: #333333;
-            --link: #007acc;
-            --border: #eaeaea;
-            --icon-filter: none;
-        }
-
-        @media (prefers-color-scheme: dark) {
-            :root {
-                --bg: #1a1a1a;
-                --text: #e0e0e0;
-                --link: #4db8ff;
-                --border: #333333;
-                --icon-filter: invert(1);
-            }
-        }
-
         body {
             background-color: var(--bg);
             color: var(--text);
@@ -90,6 +99,7 @@
     <div>
         <div class="title-box">
             <h1>竟然找到了这里...</h1>
+            <span>Yumeka の 宇宙 - 宏大世界的中的小角落</span>
 
             <div class="kiss-me">
                 <a href="https://github.com/miniyu157" title="GitHub" target="_blank" rel="noopener noreferrer">
@@ -106,17 +116,24 @@
                 </a>
                 <a href="https://y.music.163.com/m/user?id=4032263891" title="网易云音乐" target="_blank"
                     rel="noopener noreferrer">
-                    <img src="https://cdn.simpleicons.org/neteasecloudmusic/black" width="24" height="24" alt="NetEase Music">
+                    <img src="https://cdn.simpleicons.org/neteasecloudmusic/black" width="24" height="24"
+                        alt="NetEase Music">
                 </a>
                 <a href="https://t.me/KlxPiao" title="telegram" target="_blank" rel="noopener noreferrer">
                     <img src="https://cdn.simpleicons.org/telegram/black" width="24" height="24" alt="Telegram">
                 </a>
             </div>
         </div>
-        <p>这里是梦花 <s>魔法少女梦花酱</s> 在宏大宇宙中构建的一个小角落, 不过如你所见, 这里什么都没有</p>
+
+
+        <p>这里是梦花 <span class="不是">魔法少女梦花酱</span> 在宏大宇宙中构建的一个小角落。</p>
+        <p>不过如你所见，目前这里什么都没有。</p>
+
+
         <p>可能会放一些文章或者心得, 还是分享些日常?</p>
-        <p>在那之前我要找到一个趁手的博客框架才行, 但是魔法少女也是有选择困难症的 www</p>
-        <p>以及, 我不会 HTML ...</p>
+        <p>在那之前我要找到一个趁手的博客框架才行, 当然魔法少女也是有选择困难症的 www</p>
+        <p>还是说... <span class="聚焦">改造成巨大的个人档案馆怎么样？</span></p>
+        <p>以及, 我 HTML 很菜 ...</p>
     </div>
 
     <h2>传送门</h2>
