--- a/index.html
+++ b/index.html
@@ -1,152 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="index, follow">
-
-    <link rel="canonical" href="https://sudo.yumeka.blog/">
-    <link rel="icon" href="/favicon.ico" sizes="any">
-    <link rel="icon" href="/avatar.png" type="image/png">
-
-    <title>Yumeka の 宇宙</title>
-
-    <meta name="author" content="Yumeka">
-    <meta name="keywords" content="Yumeka, 梦花, 梦花酱, KlxPiao, 个人主页, 博客, 技术宅, Linux">
-    <meta name="description" content="Yumeka (梦花) 的个人博客, 她在宏大世界中构建的一个小角落">
-    <meta name="theme-color" content="#FFB6C1">
-
-    <meta property="og:locale" content="zh_CN">
-    <meta property="og:title" content="Yumeka の 宇宙">
-    <meta property="og:site_name" content="Yumeka の 宇宙">
-    <meta property="og:description" content="这里是梦花在宏大世界中构建的一个小角落。">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://sudo.yumeka.blog/">
-    <meta property="og:image" content="https://sudo.yumeka.blog/avatar.png">
-
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@YMKxxxxxxxx">
-    <meta name="twitter:title" content="Yumeka の 宇宙">
-    <meta name="twitter:description" content="这里是梦花在宏大世界中构建的一个小角落。">
-    <meta name="twitter:image" content="https://sudo.yumeka.blog/avatar.png">
-
-    <link rel="stylesheet" href="/style.css">
-
-    <style>
-        body {
-            background-color: var(--bg);
-            color: var(--text);
-            font-family: sans-serif;
-            max-width: 800px;
-            margin: 40px auto;
-            padding: 0 20px;
-            line-height: 1.6;
-            transition: background 0.3s, color 0.3s;
-        }
-
-        a {
-            color: var(--link);
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        .title-box {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-            padding-bottom: 10px;
-            border-bottom: 1px solid var(--border);
-
-            h1 {
-                margin-bottom: 10px;
-            }
-        }
-
-        .kiss-me {
-            display: flex;
-            gap: 15px;
-            align-items: center;
-        }
-
-        .kiss-me a {
-            transition: opacity 0.2s;
-        }
-
-        .kiss-me a:hover {
-            opacity: 0.7;
-        }
-
-        .kiss-me img {
-            filter: var(--icon-filter);
-        }
-
-        @media (max-width: 600px) {
-            .title-box {
-                flex-direction: column;
-                gap: 15px;
-                text-align: center;
-            }
-        }
-    </style>
-</head>
-
-<body>
-    <div>
-        <div class="title-box">
-            <h1>竟然找到了这里...</h1>
-            <span>Yumeka の 宇宙 - 宏大世界的中的小角落</span>
-
-            <div class="kiss-me">
-                <a href="https://github.com/miniyu157" title="GitHub" target="_blank" rel="noopener noreferrer">
-                    <img src="https://cdn.simpleicons.org/github/black" width="24" height="24" alt="GitHub">
-                </a>
-                <a href="https://x.com/YMKxxxxxxxx" title="X" target="_blank" rel="noopener noreferrer">
-                    <img src="https://cdn.simpleicons.org/x/black" width="24" height="24" alt="X">
-                </a>
-                <a href="javascript:alert('QQ: 1979287894')" title="QQ">
-                    <img src="https://cdn.simpleicons.org/qq/black" width="24" height="24" alt="QQ">
-                </a>
-                <a href="mailto:yumeka.love9@gmail.com" title="Mail">
-                    <img src="https://cdn.simpleicons.org/gmail/black" width="24" height="24" alt="Mail">
-                </a>
-                <a href="https://y.music.163.com/m/user?id=4032263891" title="网易云音乐" target="_blank"
-                    rel="noopener noreferrer">
-                    <img src="https://cdn.simpleicons.org/neteasecloudmusic/black" width="24" height="24"
-                        alt="NetEase Music">
-                </a>
-                <a href="https://t.me/KlxPiao" title="telegram" target="_blank" rel="noopener noreferrer">
-                    <img src="https://cdn.simpleicons.org/telegram/black" width="24" height="24" alt="Telegram">
-                </a>
-            </div>
-        </div>
-
-
-        <p>这里是梦花 <span class="不是">魔法少女梦花酱</span> 在宏大宇宙中构建的一个小角落。</p>
-        <p>不过如你所见，目前这里什么都没有。</p>
-
-
-        <p>可能会放一些文章或者心得, 还是分享些日常?</p>
-        <p>在那之前我要找到一个趁手的博客框架才行, 当然魔法少女也是有选择困难症的 www</p>
-        <p>还是说... <span class="聚焦">改造成巨大的个人档案馆怎么样？</span></p>
-        <p>以及, 我 HTML 很菜 ...</p>
-    </div>
-
-    <h2>传送门</h2>
-    <a href="https://yumeka.blog/" target="_blank">个人主页</a>&nbsp;|&nbsp;
-    <a href="https://github.com/miniyu157/home" target="_blank">个人主页的源代码</a>&nbsp;|&nbsp;
-    <a href="https://github.com/miniyu157/blog" target="_blank">这个页面的源代码</a>
-
-    <h2>留言板</h2>
-    <script src="https://giscus.app/client.js" data-repo="miniyu157/blog" data-repo-id="R_kgDORBQiyQ"
-        data-category="Announcements" data-category-id="DIC_kwDORBQiyc4C1bxr" data-mapping="pathname" data-strict="0"
-        data-reactions-enabled="1" data-emit-metadata="0" data-input-position="bottom"
-        data-theme="preferred_color_scheme" data-lang="zh-CN" crossorigin="anonymous" async>
-        </script>
-</body>
-
-</html>
+<h1>建设中....</h1>
